# omx-5dof

./: .gitignore  EXTRAS.md  README.md  dump.rdb  manipulator_node.cpp  start.sh
bridge/: redis_bridge.py  test_bridge.py
grasp/: grasp_executor.py  grasp_node.py  grasp_planner.py  motion_client.py  mtc_grasp_node.py  scene_manager.py  test.py  test_grasp_camera_runtime.py  test_integration.py  test_mtc_smart_grasp.py  test_scene_runtime.py  test_smart_grasp.py  unittest
src/: WRIST_ROLL_MODIFICATION_SUMMARY.md  move.py  move_no_trans.py
src/docs/wrist_roll_modification/: 01_URDF_CHANGES.md  02_HARDWARE_CHANGES.md  03_LAUNCH_FIX.md  04_MOVEIT_CHANGES.md  05_GUI_CHANGES.md  DOCUMENTATION_COMPLETE.md  README.md  TECHNICAL_OVERVIEW.md  TESTING_GUIDE.md
src/moveit_calibration/moveit_calibration_gui/handeye_calibration_rviz_plugin/include/moveit/handeye_calibration_rviz_plugin/: handeye_context_widget.h  handeye_control_widget.h  handeye_target_widget.h
src/moveit_calibration/moveit_calibration_gui/handeye_calibration_rviz_plugin/src/: handeye_control_widget.cpp
src/omx_interfaces/: CMakeLists.txt  package.xml
src/omx_interfaces/msg/: SceneObject.msg
src/omx_interfaces/srv/: AddObjects.srv  GetObjects.srv  GoHome.srv  Pick.srv  Place.srv  Pour.srv  RemoveObjects.srv  Rotate.srv
src/open_manipulator_bringup/config/open_manipulator_x/: hardware_controller_manager.yaml  initial_positions.yaml
src/open_manipulator_bringup/launch/: open_manipulator_x.launch.py
src/open_manipulator_description/gazebo/: open_manipulator_x.gazebo.xacro
src/open_manipulator_description/meshes/open_manipulator_x/: gripper_link_with_bracket.bak.stl  gripper_link_with_bracket.stl  wrist_link.bak.stl  wrist_link.stl
src/open_manipulator_description/ros2_control/: open_manipulator_x_position.ros2_control.xacro
src/open_manipulator_description/urdf/open_manipulator_x/: open_manipulator_x_arm.urdf.xacro
src/open_manipulator_gui/include/open_manipulator_x_gui/: main_window.hpp
src/open_manipulator_gui/src/open_manipulator_x/: main_window.cpp  qnode.cpp
src/open_manipulator_gui/ui/: open_manipulator_x_main_window.ui
src/open_manipulator_moveit_config/config/: moveit.rviz
src/open_manipulator_moveit_config/config/open_manipulator_x/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  open_manipulator_x.srdf
src/open_manipulator_moveit_config/launch/: open_manipulator_x_moveit.launch.py
src/open_manipulator_mtc/: CMakeLists.txt  package.xml
src/open_manipulator_mtc/launch/: manipulator.launch.py  pick_place.launch.py
src/open_manipulator_mtc/scripts/: camera_tf_node.py
src/open_manipulator_mtc/src/: manipulator_node.cpp  mtc_node.cpp
